# llm_acuration

./: Caching_with_prompts_.ipynb  Files_as_embeddings.ipynb  README.md  caching_with_prompts_.py  pyproject.toml
src/llm_acuration/: files_as_embeddings.py  hello.py  load_cache.py  main.py  prompt_cacher.py  refresh_cache.py
src/llm_acuration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
